syntax = "proto3";

package proto;

message ViewTrackRequest {
    bytes id = 1;
    int64 timestamp = 2; // Unit time nanoseconds
}

message ViewTrackBatchRequest {
    repeated ViewTrackRequest requests = 1;
    int64 sent_timestamp = 2;
}